v1.11.x/api-reference/data-assets/mlmodel-services/list.mdx
---
title: List ML Model Services
description: List all ML model services with optional filtering and pagination
sidebarTitle: List ML Model Services
api: GET /v1/services/mlmodelServices
---

# List ML Model Services

List all ML model services with optional filtering and pagination.

## Query Parameters

<ParamField query="limit" type="integer" default="10">
  Maximum number of results to return (max: 1000000).
</ParamField>

<ParamField query="before" type="string">
  Cursor for backward pagination.
</ParamField>

<ParamField query="after" type="string">
  Cursor for forward pagination.
</ParamField>

<ParamField query="fields" type="string">
  Comma-separated list of fields to include: `owners`, `tags`, `domains`.
</ParamField>

<ParamField query="include" type="string" default="non-deleted">
  Include `all`, `deleted`, or `non-deleted` entities.
</ParamField>

<RequestExample dropdown>
```python GET /v1/services/mlmodelServices
from metadata.sdk import configure, client as sdk_client

configure(
    host="https://your-company.open-metadata.org/api",
    jwt_token="your-jwt-token"
)
client = sdk_client().ometa.client

# List first page
services = client.get("/services/mlmodelServices", data={"limit": 50})
for svc in services["data"]:
    print(f"{svc['fullyQualifiedName']} ({svc['serviceType']})")

# List all with cursor pagination
after = None
while True:
    params = {"limit": 50}
    if after:
        params["after"] = after
    page = client.get("/services/mlmodelServices", data=params)
    for svc in page["data"]:
        print(f"{svc['fullyQualifiedName']}")
    after = page.get("paging", {}).get("after")
    if not after:
        break

# List with fields
services = client.get(
    "/services/mlmodelServices",
    data={"fields": "owners,tags,domains", "limit": 50},
)

for svc in services["data"]:
    print(f"{svc['fullyQualifiedName']}")
    if svc.get("owners"):
        print(f"  Owners: {[owner['name'] for owner in svc['owners']]}")
```

```java GET /v1/services/mlmodelServices
import static org.openmetadata.sdk.fluent.MlModelServices.*;

// List first page
var result = MlModelServices.list()
    .limit(50)
    .execute();

for (var svc : result.getData()) {
    System.out.println(svc.getFullyQualifiedName());
}

// List with fields
var result = MlModelServices.list()
    .fields("owners", "tags", "domains")
    .limit(50)
    .execute();

for (var svc : result.getData()) {
    System.out.println(svc.getFullyQualifiedName());
}
```

```bash GET /v1/services/mlmodelServices
# List all
curl "{base_url}/api/v1/services/mlmodelServices?limit=50" \
  -H "Authorization: Bearer {access_token}"

# With fields
curl "{base_url}/api/v1/services/mlmodelServices?fields=owners,tags,domains&limit=50" \
  -H "Authorization: Bearer {access_token}"
```
</RequestExample>

<ResponseExample>
```json Response
{
  "data": [
    {
      "id": "ca22d46e-81b9-4e48-85b5-0adc44980da9",
      "name": "mlflow_svc",
      "fullyQualifiedName": "mlflow_svc",
      "serviceType": "Mlflow",
      "version": 0.1,
      "updatedAt": 1769982621618,
      "updatedBy": "admin",
      "href": "http://localhost:8585/api/v1/services/mlmodelServices/ca22d46e-81b9-4e48-85b5-0adc44980da9",
      "connection": {
        "config": {
          "type": "Mlflow",
          "trackingUri": "http://localhost:8088",
          "registryUri": "http://localhost:8088",
          "supportsMetadataExtraction": true
        }
      },
      "owners": [],
      "tags": [],
      "deleted": false,
      "domains": []
    }
  ],
  "paging": {
    "after": "...",
    "total": 3
  }
}
```
</ResponseExample>

---

## Returns

Returns a paginated list of ML model service objects. By default, only basic fields are included. Use the `fields` parameter to request additional data.

## Response

<ResponseField name="data" type="array">
  Array of ML model service objects.

  <Expandable title="properties">
    <ResponseField name="id" type="string">
      Unique identifier for the ML model service (UUID format).
    </ResponseField>

    <ResponseField name="name" type="string">
      ML model service name.
    </ResponseField>

    <ResponseField name="fullyQualifiedName" type="string">
      Fully qualified name of the service.
    </ResponseField>

    <ResponseField name="displayName" type="string">
      Human-readable display name.
    </ResponseField>

    <ResponseField name="serviceType" type="string">
      Type of ML model service (e.g., Mlflow, Sklearn, SageMaker, CustomMlModel).
    </ResponseField>

    <ResponseField name="connection" type="object">
      Connection configuration for the service.
    </ResponseField>

    <ResponseField name="owners" type="array" optional>
      List of owners. Only included when `fields` contains `owners`.
    </ResponseField>

    <ResponseField name="tags" type="array" optional>
      Classification tags. Only included when `fields` contains `tags`.
    </ResponseField>

    <ResponseField name="domains" type="array" optional>
      Domain assignments. Only included when `fields` contains `domains`.
    </ResponseField>
  </Expandable>
</ResponseField>

<ResponseField name="paging" type="object">
  Pagination information.

  <Expandable title="properties">
    <ResponseField name="total" type="integer">
      Total count of ML model services matching the query.
    </ResponseField>

    <ResponseField name="after" type="string" optional>
      Cursor for the next page of results. Null if this is the last page.
    </ResponseField>

    <ResponseField name="before" type="string" optional>
      Cursor for the previous page of results. Null if this is the first page.
    </ResponseField>
  </Expandable>
</ResponseField>

---

## Error Handling

| Code | Error Type | Description |
|------|-----------|-------------|
| `401` | `UNAUTHORIZED` | Invalid or missing authentication token |
| `403` | `FORBIDDEN` | User lacks permission to list ML model services |
